--- a/css/style.css
+++ b/css/style.css
@@ -15,12 +15,11 @@ a {
     background-repeat: no-repeat;
     margin: 0;
     padding: 0;
-    background-size: cover;
-    background-position-y: -18rem;
+    /* background-size: cover; */
+    /* background-position-y: -18rem; */
 }
 .buttons {
     display: flex;
-    column-gap: 3rem;
     padding: 2rem;
 }
 
@@ -76,6 +75,33 @@ a {
     text-decoration: none;
 }
 
+.btn-home {
+    background-image: linear-gradient(
+        to right,
+        #ffbcbc 0%,
+        #9733ee 51%,
+        #ffbcbc 100%
+    );
+}
+.btn-home {
+    margin: 10px;
+    padding: 15px 45px;
+    text-align: center;
+    text-transform: uppercase;
+    transition: 0.5s;
+    background-size: 200% auto;
+    color: white;
+    box-shadow: 0 0 20px #eee;
+    border-radius: 10px;
+    display: block;
+}
+
+.btn-home:hover {
+    background-position: right center; 
+    color: #fff;
+    text-decoration: none;
+}
+
 .btn-gallery {
     background-image: linear-gradient(
         to right,
@@ -104,8 +130,8 @@ a {
 }
 
 .cover {
-    width: 240px;
-    height: 240px;
+    width: 340px;
+    height: 340px;
    
     box-shadow: 0 0 30px #eee;
     position: absolute;
